Reearnage toolbar elements and correct blurred back drop sizing

--- a/src/components/toolBarComponents/toolBar/toolBar.scss
+++ b/src/components/toolBarComponents/toolBar/toolBar.scss
@@ -28,11 +28,11 @@
 
 @media screen and (min-width: 1024px) {
   .toolBarContainer {
-    height: 8vh;
+    height: 8dvh;
   }
 
   .toolBarIcon {
-    width: 4vw;
+    width: 4dvw;
   }
 }
 
